# maxine-eye-contact-webcam

./: .gitignore  .pre-commit-config.yaml  PROJECT_RULES.md  README.md  build_proto.sh  docker-compose.yml  docker-stack.yml  eyecontact_pb2.py  eyecontact_pb2_grpc.py  flp_gpu_adapter.py  frontalizer.py  gpu_format_convert.py  head_pose_estimator.py  liveportrait_frontalizer.py  maxine-ar-sdk-webcam.service  maxine-webcam.service  maxine_ar_webcam.cpp  maxine_arsdk_headpose.py  maxine_fused_pipeline.py  maxine_webcam_pipeline.py  pyproject.toml  quickstart.sh  requirements.txt  setup.sh  show_flp_path.py  test_ar_sdk.cpp
.github/: CODEOWNERS
.github/workflows/: docker-build.yml
docker/: .dockerignore  Dockerfile  Dockerfile.base  entrypoint.sh
docker/scripts/: onnx2trt_v10.py
docker/src/: gazeEngine.cpp  gazeEngine.h  maxine_ar_webcam.cpp
docker/src/maxine_ar_ext/: README.md  bindings.cpp  pyproject.toml  setup.py
docker/utils/: featureVertexName.cpp  featureVertexName.h  nvCVOpenCV.h  renderingUtils.cpp  renderingUtils.h
plans/: head-pose-correction-plan.md  virtual-clothing-plan.md
scripts/: measure_latency.py  pre-commit  pre-push  push-arsdk-base.sh
tests/: conftest.py  test_flp_gpu_adapter.py  test_frontalizer.py  test_gpu_format_convert.py  test_head_pose_estimator.py  test_maxine_fused_pipeline.py  test_pipeline.py  test_smoke.py
