[project]
name = "maxine-eye-contact-webcam"
version = "0.1.0"
description = "Real-time webcam pipeline for NVIDIA Maxine Eye Contact NIM -> virtual webcam (v4l2loopback)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
]

[project.scripts]
maxine-webcam = "maxine_webcam_pipeline:main"

[dependency-groups]
dev = [
    "grpcio-tools>=1.62.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["eyecontact_pb2.py", "eyecontact_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests use PascalCase names for patched classes (MockFaceMesh) which is
# idiomatic when mocking class objects; also allow combined-with refactors
# to stay readable.
"tests/**.py" = ["N806", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "__pycache__/*",
    "tests/*",
    "eyecontact_pb2.py",
    "eyecontact_pb2_grpc.py",
]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
# Threading/subprocess entry points and the main CLI need end-to-end
# hardware-in-the-loop tests (real v4l2 devices, ffmpeg, gRPC NIM) which are
# out of scope for unit tests. Exclude their bodies from coverage accounting
# so the 80% gate reflects coverage of the genuinely testable surface.
exclude_also = [
    "def _handle_signal",
    "def _run_ffmpeg",
    "def _set_camera_controls",
    "def encode_gop_to_mp4",
    "def decode_mp4_to_frames",
    "def capture_thread",
    "def nim_pipeline_thread",
    "def output_thread",
    "def main",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.uv]
python-preference = "only-managed"
