[project]
name = "maxine-eye-contact-webcam"
version = "0.2.0"
description = "Real-time unified head-pose + gaze-redirection webcam (FasterLivePortrait + NVIDIA AR SDK, single Docker container)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Runtime deps live in the Docker image (docker/Dockerfile) — FasterLivePortrait,
# TensorRT, pycuda, the pybind11 shim over NVIDIA AR SDK, etc. The host only
# needs dev tooling for lint + test parity with CI.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "vendor/**",  # cloned third-party (FasterLivePortrait) — upstream style, not ours
    "docker/**",  # C++ shim sources + build outputs
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
python-preference = "only-managed"
